<resources>
    <string name="app_name">Clipphy</string>
    <string name="btn_text">Get Start</string>
    <string name="btn_text1">Login</string>
    <string name="btn_text2">Register</string>
    <string name="btn_text3">Buy Now</string>
    <string name="btn_text4">Add to Cart</string>
    <string name="intro_text">Welcome to Clipphy!</string>
    <string name="intro_text2">The ultimate platform for smart and collaborative shopping!</string>
    <string name="register_text1">Join Clipphy Today!</string>
    <string name="register_text2">Register to unlock exclusive offers, seamless shopping, and a smarter way to buy together</string>
    <string name="login_text1">Welcome back!</string>
    <string name="login_text2">Log in to explore amazing deals and shop with Clipphy Crew. Your next favorite purchase is just a tap away!</string>
    <string name="input_text1">First Name</string>
    <string name="input_text2">Last Name</string>
    <string name="input_text3">Email</string>
    <string name="input_text4">Password</string>
    <string name="text3">Started</string>
    <string name="text4">Pending</string>
    <string name="text5">User</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_text5">View and Join</string>
    <string name="btn_text6">Join</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>