<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="187dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register_text1"
            android:textColor="@color/material_dynamic_neutral20"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="346dp"
            android:layout_height="105dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/register_text2"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/input_text1"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/login_inputs"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/input_text2"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/login_inputs"
            android:ems="10"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/input_text3"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/login_inputs"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/input_text4"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="276dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/login_inputs"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:width="275dp"
            android:height="52dp"
            android:background="@drawable/login_button"
            android:text="@string/btn_text2"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>